--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "drizzle-orm": "^0.33.0",
     "next": "14.2.13",
     "pnpm": "^9.11.0",
+    "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
     "supabase": "^1.200.3"
