--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/typeorm": "^10.0.2",
+    "dotenv": "^16.4.5",
     "nestjs-pino": "^4.1.0",
     "pg": "^8.13.0",
     "postgres": "^3.4.4",
