HIT-94:initialized service and module files forproduct and  pricing

--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,10 @@
 APP_NAME="Products API"
 PORT=8081
+
+DATABASE_URL=
+DATABASE_TYPE=
+DATABASE_HOST=
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_NAME=
+DATABASE_PORT=
