--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "pnpm start:doc && pnpm start:app ",
-    "start:app": "nest start",
+    "start": "nest start",
     "start:dev": "nest start --watch | pino-pretty",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -33,6 +32,8 @@
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/typeorm": "^10.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "nestjs-pino": "^4.1.0",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.2",
