HIT-95:implemeted basic logger and tests for products and product-pricing controller

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-validator": "^0.14.1",
     "nestjs-pino": "^4.1.0",
     "pg": "^8.13.0",
+    "pino": "^9.4.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
@@ -80,6 +81,12 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1"
+    },
+    "roots": [
+      "<rootDir>"
+    ]
   }
 }
