--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/cqrs": "^10.2.7",
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/platform-express": "^10.4.4",
+    "@nestjs/schedule": "^4.1.1",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/typeorm": "^10.0.2",
