--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "express-basic-auth": "^1.2.1",
     "nestjs-pino": "^4.1.0",
     "pg": "^8.13.0",
     "pino": "^9.4.0",
