--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "express-basic-auth": "^1.2.1",
     "nest-winston": "^1.9.7",
     "pg": "^8.13.0",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
