--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -2,7 +2,7 @@
 ## DEVELOPMENT
 FROM node:lts-bookworm as dev
 WORKDIR /var/api
-COPY --chown=node:node backend/ ./
+COPY --chown=node:node ./ ./
 
 ENV APT_KEY_DONT_WARN_ON_DANGEROUS_USAGE=DontWarn
 ENV DEBIAN_FRONTEND=noninteractive
